@@ -1,3 +1,10 @@
+2007-08-09  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* src/loop_can.c: Change all CYGPKG_IO_CAN_* to CYGPKG_DEVS_CAN_*
+	  so that the loopback driver gets compiled. It looks like
+	  at some point in its life it used to live in io/can instead
+	  of its current location in dev/can/loop.
+
 2007-03-23  Uwe Kindler  <uwe_kindler@web.de>
 
     * cdl/can_loop.cd: Changed naming of various options from 
